一些底层设施

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "Lua.diagnostics.globals": ["ac"]
+    "Lua.diagnostics.globals": [
+        "ac"
+    ],
+    "Lua.workspace.ignoreDir": ["tools/w3x2lni"]
 }
