--- a/table/w3i.ini
+++ b/table/w3i.ini
@@ -1,6 +1,6 @@
 [地图]
 文件版本 = 25
-地图版本 = 17
+地图版本 = 22
 编辑器版本 = 6052
 地图名称 = "只是另外一张魔兽争霸的地图"
 作者名字 = "未知"
@@ -77,7 +77,7 @@ z轴终点 = 5000.0000
 水面颜色 = {255, 255, 255, 255}
 
 [玩家]
-玩家数量 = 1
+玩家数量 = 5
 
 [玩家1]
 玩家 = 0
@@ -86,6 +86,46 @@ z轴终点 = 5000.0000
 修正出生点 = 0
 名字 = "玩家 1"
 出生点 = {320.0000, 640.0000}
+低结盟优先权标记 = {}
+高结盟优先权标记 = {}
+
+[玩家2]
+玩家 = 1
+类型 = 2
+种族 = 2
+修正出生点 = 0
+名字 = "玩家 2"
+出生点 = {-1152.0000, -2048.0000}
+低结盟优先权标记 = {}
+高结盟优先权标记 = {}
+
+[玩家3]
+玩家 = 2
+类型 = 2
+种族 = 3
+修正出生点 = 0
+名字 = "玩家 3"
+出生点 = {576.0000, 1664.0000}
+低结盟优先权标记 = {}
+高结盟优先权标记 = {}
+
+[玩家4]
+玩家 = 3
+类型 = 2
+种族 = 4
+修正出生点 = 0
+名字 = "玩家 4"
+出生点 = {-1920.0000, 2816.0000}
+低结盟优先权标记 = {}
+高结盟优先权标记 = {}
+
+[玩家5]
+玩家 = 4
+类型 = 2
+种族 = 1
+修正出生点 = 0
+名字 = "玩家 5"
+出生点 = {384.0000, -1600.0000}
 低结盟优先权标记 = {}
 高结盟优先权标记 = {}
 
@@ -98,5 +138,5 @@ z轴终点 = 5000.0000
 共享视野 = 0
 共享单位控制 = 0
 共享高级单位设置 = 0
-玩家列表 = {1}
+玩家列表 = {1, 2, 3, 4, 5}
 队伍名称 = "队伍 1"
