--- a/scripts/table/unit.ini
+++ b/scripts/table/unit.ini
@@ -3,12 +3,10 @@ id = 'E000'
 attribute = {
     '生命上限' = 1000,
     '攻击' = 100,
-    '攻击速度' = 1.0,
     '护甲' = 100,
     '移动速度' = 300,
-    '搜敌范围' = 100,
 }
-weapon = {
+attack = {
     type = '立即',
 }
 
@@ -17,10 +15,8 @@ id = 'e001'
 attribute = {
     '生命上限' = 1000,
     '攻击' = 50,
-    '攻击速度' = 2.0,
-    '搜敌范围' = 100,
 }
-weapon = {
+attack = {
     type = '弹道',
     range = 500,
     mover = {
