--- a/scripts/table/unit.ini
+++ b/scripts/table/unit.ini
@@ -1,5 +1,6 @@
 [default]
 class = '生物'
+hitHeight = 60
 
 [测试英雄]
 id = 'E000'
@@ -26,6 +27,6 @@ attack = {
     mover = {
         model = [[Abilities\Weapons\AncientProtectorMissile\AncientProtectorMissile.mdl]],
         speed = 1000,
-        point = {0, 0, 60},
+        point = {0, 0, 200},
     }
 }
