修正投射物发射位置

--- a/scripts/table/unit.ini
+++ b/scripts/table/unit.ini
@@ -27,6 +27,6 @@ attack = {
     mover = {
         model = [[Abilities\Weapons\AncientProtectorMissile\AncientProtectorMissile.mdl]],
         speed = 1000,
-        point = {0, 0, 200},
+        startHeight = 200,
     }
 }
