改一下默认技能ID

--- a/table/imp.ini
+++ b/table/imp.ini
@@ -4,6 +4,8 @@ import = {
 "debugger.dll.sign",
 "lni.dll",
 "lni.dll.sign",
+"model\\dummy-common.mdl",
+"model\\dummy-mover.mdl",
 "w3x2lni\\plugin\\.config",
 "w3x2lni\\plugin\\本地脚本.lua",
 }
