简单支持一下描述中的引用

--- a/scripts/table/skill.ini
+++ b/scripts/table/skill.ini
@@ -4,5 +4,6 @@ initLevel = 1
 
 [测试技能]
 passive = 1
+title = '测试技能 - 等级 ${level}'
 description = '这是技能描述'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
