--- a/table/imp.ini
+++ b/table/imp.ini
@@ -6,6 +6,7 @@ import = {
 "lni.dll.sign",
 "model\\dummy-common.mdl",
 "model\\dummy-mover.mdl",
+"units\\commandfunc.txt",
 "w3x2lni\\plugin\\.config",
 "w3x2lni\\plugin\\本地脚本.lua",
 }
