--- a/table/imp.ini
+++ b/table/imp.ini
@@ -8,5 +8,6 @@ import = {
 "model\\dummy-mover.mdl",
 "units\\commandfunc.txt",
 "w3x2lni\\plugin\\.config",
+"w3x2lni\\plugin\\引用声明.lua",
 "w3x2lni\\plugin\\本地脚本.lua",
 }
