用插件来抹平标准数据

--- a/scripts/table/skill.ini
+++ b/scripts/table/skill.ini
@@ -3,7 +3,10 @@ maxLevel = 1
 initLevel = 1
 
 [测试技能]
-passive = 1
 title = '测试技能 - 等级 ${level}'
 description = '这是技能描述'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
+range = 500
+targetType = '点'
+cool = 1
+cost = 100
