--- a/scripts/table/unit.ini
+++ b/scripts/table/unit.ini
@@ -6,10 +6,11 @@ hitHeight = 60
 id = 'E000'
 attribute = {
     '生命上限' = 1000,
+    '魔法上限' = 1000,
     '攻击' = 100,
     '护甲' = 100,
     '移动速度' = 300,
-    '生命恢复' = 10,
+    '魔法恢复' = 100,
 }
 attack = {
     type = '立即',
