更新测试图

--- a/scripts/table/unit.ini
+++ b/scripts/table/unit.ini
@@ -12,6 +12,7 @@ attribute = {
     '移动速度' = 300,
     '魔法恢复' = 100,
 }
+type = '英雄'
 attack = {
     type = '立即',
 }
@@ -22,6 +23,7 @@ attribute = {
     '生命上限' = 1000,
     '攻击' = 50,
 }
+type = {'建筑', '测试'}
 attack = {
     type = '弹道',
     range = 500,
