不忽略子模块

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "ac",
         "fs"
     ],
-    "Lua.workspace.ignoreDir": ["tools/w3x2lni"]
+    "Lua.workspace.ignoreDir": [
+        "tools/w3x2lni"
+    ],
+    "Lua.workspace.ignoreSubmodules": false
 }
