--- a/scripts/table/skill.ini
+++ b/scripts/table/skill.ini
@@ -13,3 +13,14 @@ cost = 100
 hotkey = 'Q'
 castStartTime = 1
 castShotTime = 1
+
+[测试物品]
+title = '测试物品'
+description = '这只是一件测试用的物品'
+icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
+range = 500
+targetType = '点'
+cool = 1
+cost = 100
+castStartTime = 1
+castShotTime = 1
