更新测试地图

--- a/scripts/table/item.ini
+++ b/scripts/table/item.ini
@@ -3,3 +3,12 @@ skill = '测试物品'
 title = '测试物品'
 description = '这只是一件测试用的物品'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
+[[.price]]
+type = '金币'
+value = 2000
+[[.price]]
+type = '木材'
+value = 1000
+[[.price]]
+type = '食物'
+value = 10
