--- a/table/w3i.ini
+++ b/table/w3i.ini
@@ -1,6 +1,6 @@
 [地图]
 文件版本 = 25
-地图版本 = 22
+地图版本 = 23
 编辑器版本 = 6052
 地图名称 = "只是另外一张魔兽争霸的地图"
 作者名字 = "未知"
@@ -87,17 +87,17 @@ z轴终点 = 5000.0000
 名字 = "玩家 1"
 出生点 = {320.0000, 640.0000}
 低结盟优先权标记 = {}
-高结盟优先权标记 = {}
+高结盟优先权标记 = {2}
 
 [玩家2]
 玩家 = 1
-类型 = 2
+类型 = 1
 种族 = 2
 修正出生点 = 0
 名字 = "玩家 2"
 出生点 = {-1152.0000, -2048.0000}
 低结盟优先权标记 = {}
-高结盟优先权标记 = {}
+高结盟优先权标记 = {1}
 
 [玩家3]
 玩家 = 2
