--- a/table/unit.ini
+++ b/table/unit.ini
@@ -11,3 +11,10 @@ _parent = "etrp"
 weapTp1 = "instant"
 -- 攻击 2 - 武器类型
 weapTp2 = "normal"
+
+[h000]
+_parent = "hvlt"
+-- 制造物品
+Makeitems = ""
+-- 普通
+abilList = ""
