--- a/scripts/table/item.ini
+++ b/scripts/table/item.ini
@@ -3,6 +3,10 @@ skill = '测试物品'
 title = '测试物品'
 description = '这只是一件测试用的物品'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
+attribute = {
+'生命上限' = 1000,
+'攻击' = 100,
+}
 [[.price]]
 type = '金币'
 value = 2000
