更新测试地图

--- a/scripts/table/item.ini
+++ b/scripts/table/item.ini
@@ -1,5 +1,4 @@
 [测试物品]
-skill = '测试物品'
 title = '测试物品'
 description = '这只是一件测试用的物品'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
@@ -7,6 +6,7 @@ attribute = {
 '生命上限' = 1000,
 '攻击' = 100,
 }
+drop = 1
 [[.price]]
 type = '金币'
 value = 2000
