--- a/scripts/table/unit.ini
+++ b/scripts/table/unit.ini
@@ -14,7 +14,13 @@ attribute = {
 }
 type = '英雄'
 attack = {
-    type = '立即',
+    type = '弹道',
+    range = 500,
+    mover = {
+        model = [[Abilities\Weapons\AncientProtectorMissile\AncientProtectorMissile.mdl]],
+        speed = 1000,
+        startHeight = 200,
+    }
 }
 
 [测试防御塔]
