更新测试地图

--- a/scripts/table/skill.ini
+++ b/scripts/table/skill.ini
@@ -8,8 +8,11 @@ description = '这是技能描述'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
 range = 500
 targetType = '点'
-cool = 1
+cool = 10
 cost = 100
 hotkey = 'Q'
 castStartTime = 1
 castShotTime = 1
+
+[测试物品]
+description = '333333'
