--- a/scripts/table/item.ini
+++ b/scripts/table/item.ini
@@ -1,5 +1,6 @@
 [测试物品]
-title = '测试物品'
+skill = '测试物品'
+title = '测试物品(${hotkey})'
 description = '这只是一件测试用的物品'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
 attribute = {
@@ -9,10 +10,10 @@ attribute = {
 drop = 1
 [[.price]]
 type = '金币'
-value = 2000
+value = 100000
 [[.price]]
 type = '木材'
-value = 1000
+value = 0
 [[.price]]
 type = '食物'
-value = 10
+value = 0
