更新测试地图

--- a/scripts/table/skill.ini
+++ b/scripts/table/skill.ini
@@ -7,7 +7,7 @@ title = '测试技能 - 等级 ${level}'
 description = '这是技能描述'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
 range = 500
-targetType = '点'
+targetType = '无'
 cool = 0.5
 cost = 100
 hotkey = 'Q'
