更新测试地图

--- a/scripts/table/item.ini
+++ b/scripts/table/item.ini
@@ -1,13 +1,14 @@
 [测试物品]
 skill = '测试物品'
 title = '测试物品(${hotkey})'
-description = '这只是一件测试用的物品'
+description = '这只是一件测试用的物品\r\n${cool}\r\n${attribute["生命上限"]}'
 icon = [[ReplaceableTextures\CommandButtons\BTNInvisibility.blp]]
 attribute = {
 '生命上限' = 1000,
 '攻击' = 100,
 }
 drop = 1
+cool = 1
 [[.price]]
 type = '金币'
 value = 1000
