更新测试地图

--- a/scripts/table/skill.ini
+++ b/scripts/table/skill.ini
@@ -12,4 +12,14 @@ cool = 0.5
 cost = 100
 hotkey = 'Q'
 
+[测试技能2]
+title = '测试技能2 - 等级 ${level}'
+description = '这是技能描述2'
+icon = [[ReplaceableTextures\PassiveButtons\PASBTNFlakCannons.blp]]
+range = 500
+targetType = '无'
+cool = 0.5
+cost = 100
+hotkey = 'Q'
+
 [测试物品]
